--- a/manifest/dbz.yaml
+++ b/manifest/dbz.yaml
@@ -7,7 +7,7 @@ metadata:
   name: dbz
 spec:
   containers:
-  - image: atostrife/dbz
+  - image: atostrife/dbz:53
     name: dbz
     resources: {}
   dnsPolicy: ClusterFirst
