--- a/manifest/dbz.yaml
+++ b/manifest/dbz.yaml
@@ -9,9 +9,6 @@ spec:
   containers:
   - image: atostrife/dbz:53
     name: dbz
-    resources: {}
-  dnsPolicy: ClusterFirst
-  restartPolicy: Always
 
 ---
 
@@ -29,3 +26,27 @@ spec:
     targetPort: 80
   selector:
     run: dbz
+
+---
+
+kind: Ingress
+metadata:
+  name: dbz-ingress
+  namespace: dbz-ns
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: dbz.oecd.org
+    http:
+      paths:
+      - backend:
+          service:
+            name: dbz
+            port:
+              number: 80
+        path: /
+        pathType: Prefix
+  tls:
+  - hosts:
+    - dbz.oecd.org
+    secretName: oecd-wildcard-internal-tls
