--- a/manifest/dbz.yaml
+++ b/manifest/dbz.yaml
@@ -26,3 +26,29 @@ spec:
     targetPort: 80
   selector:
     run: dbz
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  creationTimestamp: null
+  name: dbz-ingress
+  namespace: dbz-ns
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: dbz.oecd.org
+    http:
+      paths:
+      - backend:
+          service:
+            name: dbz
+            port:
+              number: 80
+        path: /
+        pathType: Exact
+  tls:
+  - hosts:
+    - dbz.oecd.org
+    secretName: oecd-wildcard-internal-tls
