--- a/prod/Overlays/PROD/kustomization.yaml
+++ b/prod/Overlays/PROD/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
 - ../../base
 
 nameSuffix: -prod
-namespace workspace007--prod
+namespace: workspace007-prod
 
 #patches:
 ##- path: replica_count.yaml
