--- a/prod/Overlays/ST/kustomization.yaml
+++ b/prod/Overlays/ST/kustomization.yaml
@@ -1,7 +1,7 @@
 ﻿apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization 
 resources:
-- ../../base
+- ../../Base
 
 nameSuffix: -st
 namespace: workspace007-st
