--- a/st/Overlays/ST/kustomization.yaml
+++ b/st/Overlays/ST/kustomization.yaml
@@ -1,9 +1,10 @@
 ﻿apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization 
 resources:
-- ../../base
+- ../../Base
 
 nameSuffix: -st
+namespace: workspace007-st
 
 #patches:
 #- path: replica_count.yaml
