--- a/prod/Overlays/PROD/kustomization.yaml
+++ b/prod/Overlays/PROD/kustomization.yaml
@@ -1,10 +1,25 @@
-﻿apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization 
-resources:
-- ../../Base
-
-nameSuffix: -prod
-namespace: workspace007-prod
-
-#patches:
+﻿apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization 
+resources:
+- ../../Base
+
+nameSuffix: -prod
+namespace: workspace007-prod
+
+#patches:
 #- path: replica_count.yaml
+
+
+patchesJson6902:
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: workspace007
+    patch: |
+      - op: replace
+        path: /metadata/labels/app
+        value: workspace007-prod
+      - op: replace
+        path: /spec/template/metadata/labels/app
+        value: workspace007-prod
