--- a/prod/Overlays/PROD/kustomization.yaml
+++ b/prod/Overlays/PROD/kustomization.yaml
@@ -9,17 +9,20 @@ namespace: workspace007-prod
 #patches:
 #- path: replica_count.yaml
 
-
-patchesJson6902:
+patches:
   - target:
       group: apps
       version: v1
       kind: Deployment
       name: workspace007
     patch: |
-      - op: replace
+      - op: add
         path: /metadata/labels/app
         value: workspace007-prod
-      - op: replace
+      - op: add
+        path: /spec/selector/matchLabels/app
+        value: workspace007-prod
+      - op: add
         path: /spec/template/metadata/labels/app
         value: workspace007-prod
+
